fix: add analytics

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     </script>
 
   <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
+
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "39b3f649338e48949249a224d816fd38"}'></script><!-- End Cloudflare Web Analytics -->
   <style>
     * {
       box-sizing: border-box;
